Removed Emoji data from bundle to reduce bundle zize from 60kB to 7kB. This will break parts of the picker (preview, skins, search, ...). Added virtual scrolling and the ability to hide the search.

--- a/src/lib/picker/picker.component.html
+++ b/src/lib/picker/picker.component.html
@@ -11,7 +11,7 @@
       [icons]="categoriesIcons"
     ></emoji-mart-anchors>
   </div>
-  <emoji-search
+  <emoji-search *ngIf="showSearch"
     #searchRef
     [i18n]="i18n"
     (search)="handleSearch($event)"
